# SmtpPoC

./: .gitignore  CMakeLists.txt  SmtpTest0r.kdev4
include/: ConsoleLogger.h  ILogger.h  SMTPSock.h
src/: ConsoleLogger.cpp  MainEntry.cpp  SMTPSock.cpp
